--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
 		<artifactId>httpclient</artifactId>
 		<version>4.5.13</version>
 	</dependency>
+	<dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.12</version>
+    	<scope>test</scope>
+	</dependency>
   </dependencies>
   
   <packaging>jar</packaging>
